FIX: Fix collection bar obscuring page and showing gap when in responsive mode [t20610]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@13395 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/responsive/slim-style.css
+++ b/css/responsive/slim-style.css
@@ -33,14 +33,21 @@ body {
 @media(max-width:1100px) {
 
     #UICenter{
-        max-height: calc(100% - 250px);
-        min-height: calc(100% - 250px);
-        overflow-y: auto !important;
+        margin-bottom: 161px !important;
+        height: auto !important;
     }
 
     #UICenter.NoSearch{
         max-height: calc(100% - 60px);
         min-height: calc(100% - 60px);
+    }
+
+    #CollectionDiv {
+        position:fixed !important;
+    }
+    
+    .ui-layout-resizer {
+        position:fixed !important;
     }
     
     .ui-layout-pane-center
